feat: added `enabled` field to `Server`
